; ModuleID = '/home/carl/AnghaBench/linux/drivers/hv/extr_channel.c___vmbus_recvpacket.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hv/extr_channel.c___vmbus_recvpacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmbus_channel = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vmbus_channel*, i8*, i32, i32*, i32*, i32)* @__vmbus_recvpacket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__vmbus_recvpacket(%struct.vmbus_channel* %0, i8* %1, i32 %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca %struct.vmbus_channel*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.vmbus_channel* %0, %struct.vmbus_channel** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load %struct.vmbus_channel*, %struct.vmbus_channel** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = load i32*, i32** %11, align 8
  %18 = load i32, i32* %12, align 4
  %19 = call i32 @hv_ringbuffer_read(%struct.vmbus_channel* %13, i8* %14, i32 %15, i32* %16, i32* %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @hv_ringbuffer_read(%struct.vmbus_channel*, i8*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
